--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,15 @@
 
     <groupId>org.example</groupId>
     <artifactId>myapp</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>git cicd</name>
+            <url>https://github.com/nitishkumar1288/myapp.git</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
