--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Publish to GitHub Packages Apache Maven
       run: |
-        chmod +x ./deployment/retailer1/rubix-install.sh
+        chmod +x  deployment/retailer1/rubix-install.sh
       shell: bash
       env:
         GITHUB_TOKEN: ${{ github.token }}
