--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -37,4 +37,5 @@ jobs:
       shell: bash
       env:
         ENVIRONMENT_VARIABLE_NAME: ${{ secrets.DEV_API_HOST }}
+         echo $ENVIRONMENT_VARIABLE_NAME
         GITHUB_TOKEN: ${{ github.token }}
