--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,14 +31,12 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: |
-       chmod +x  ./deployment/retailer1/rubix-install.sh
-       ./deployment/retailer1/rubix-install.sh
-      # shell: bash
-    - name: use secret variable  
       env:
         ENVIRONMENT_VARIABLE_NAME: ${{ secrets.DEV_API_HOST }}
         GITHUB_TOKEN: ${{ github.token }}
       run: |
-          echo "Using secret in a command"
-          echo "Value of secret: $ENVIRONMENT_VARIABLE_NAME"
+       echo "Value of secret: ${{ secrets.DEV_API_HOST }}"
+       chmod +x  ./deployment/retailer1/rubix-install.sh
+       ./deployment/retailer1/rubix-install.sh
+      # shell: bash
+   
