--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         java-version: '8'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml check
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
